--- a/package.json
+++ b/package.json
@@ -11,30 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
-    "bootstrap": "4.3.1",
+    "@angular/animations": "^11.0.7",
+    "@angular/common": "^11.0.7",
+    "@angular/compiler": "^11.0.7",
+    "@angular/core": "^11.0.7",
+    "@angular/forms": "^11.0.7",
+    "@angular/platform-browser": "^11.0.7",
+    "@angular/platform-browser-dynamic": "^11.0.7",
+    "@angular/router": "^11.0.7",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.12",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "rxjs": "~6.3.3",
+    "material-icons": "^0.5.2",
+    "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.6",
     "@angular/cli": "^11.0.6",
     "@angular/compiler-cli": "^11.0.7",
-    "@angular/language-service": "^7.2.16",
+    "@angular/language-service": "^11.0.7",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.2.3",
@@ -45,6 +47,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~4.0.5"
   }
 }
