--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "^11.0.7",
     "@angular/platform-browser-dynamic": "^11.0.7",
     "@angular/router": "^11.0.7",
-    "bootstrap": "^4.3.1",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "bootstrap": "^4.5.3",
+    "codelyzer": "^4.5.0",
     "core-js": "^2.6.12",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "material-components-web": "^9.0.0",
     "material-icons": "^0.5.2",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
     "zone.js": "~0.10.3"
@@ -41,7 +45,7 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^7.0.0",
